--- a/src/main/webapp/WEB-INF/views/characters/edit.html
+++ b/src/main/webapp/WEB-INF/views/characters/edit.html
@@ -2,11 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Update person</title>
+    <title>Update character</title>
 </head>
 <body>
 
-<form th:method="PATCH" th:action="@{/people/{id}(id=${person.getId()})}" th:object="${person}">
+<form th:method="PATCH" th:action="@{/characters/{id}(id=${character.getId()})}" th:object="${character}">
     <label for="name">Enter name: </label>
     <input type="text" th:field="*{name}" id="name"/>
     <br/>
