Created simple crud_app without DB

--- a/src/main/webapp/WEB-INF/views/characters/index.html
+++ b/src/main/webapp/WEB-INF/views/characters/index.html
@@ -7,7 +7,8 @@
 <body>
 
 <div th:each="character : ${character}">
-    <a th:href="@{/characters/{id}(id=${character.getId()})}" th:text="${character.getName()}">character</a>
+    <a th:href="@{/characters/{id}(id=${character.getId()})}"
+       th:text="${character.getName() + ', ' + character.getAge()}">character</a>
 </div>
 
 <br/>
