--- a/src/main/webapp/WEB-INF/views/characters/edit.html
+++ b/src/main/webapp/WEB-INF/views/characters/edit.html
@@ -9,6 +9,15 @@
 <form th:method="PATCH" th:action="@{/characters/{id}(id=${character.getId()})}" th:object="${character}">
     <label for="name">Enter name: </label>
     <input type="text" th:field="*{name}" id="name"/>
+    <div style="color:orangered" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error</div>
+    <br/>
+    <label for="age">Enter age: </label>
+    <input type="text" th:field="*{age}" id="age"/>
+    <div style="color:orangered" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Age error</div>
+    <br/>
+    <label for="cartoonName">Enter cartoon: </label>
+    <input type="text" th:field="*{cartoonName}" id="cartoonName"/>
+    <div style="color:orangered" th:if="${#fields.hasErrors('cartoonName')}" th:errors="*{cartoonName}">Name of cartoon error</div>
     <br/>
     <input type="submit" value="Update!"/>
 </form>
